--- a/style.css
+++ b/style.css
@@ -23,10 +23,14 @@ header .container{
     /* estilizar os links de listas dentro do header */
     header li {
         display:inline;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: bold;
+        margin-left: 16px;
         
     }
     header li a{
         color: #fff;
+        text-decoration:none ;
     }
 
 /*  container é um elemento que irá englobar toda sua página, será o primeiro elemento e dentro dele virão as informações */
@@ -43,7 +47,8 @@ header .container{
 
 }
 .articles article img{
-    height:180px;
+    /* height:180px; */
+    width: 100%;
 
 }
 .articles article {
